# ai-deadlines

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  TODO.md  alpine_git_python.dockerfile  cron.sh  make_website.sh  nginx_plus.dockerfile  requirements-dev.txt  requirements.txt  setup.cfg  update.py  update_tailwind.sh
.github/workflows/: ci.yml
aideadlines/: __init__.py  ansi_to_html.py  cli.py  data_to_json.py  index.html  log_config.py  merge.py  ranking.py  robots.txt  scripts.js  sitemap.xml  styles.css  styles.tailwind.css  update_data.py  utils.py  validate.py
aideadlines/parser/: __init__.py  ccf_deadlines.py  common_website.py  hf_list.py  http.py  ninoduarte_list.py  see_future.py  wacv.py
conferences/: aaai.yaml  aamas.yaml  accv.yaml  acl.yaml  acml.yaml  acmmm.yaml  aistats.yaml  alt.yaml  biorob.yaml  bis.yaml  bmvc.yaml  cec.yaml  chi.yaml  chil.yaml  cicai.yaml  cikm.yaml  coling.yaml  collas.yaml  colm.yaml  colt.yaml  conll.yaml  corl.yaml  cpal.yaml  cvpr.yaml  cvpr_ws.yaml  dai.yaml  dv.yaml  eacl.yaml  ecai.yaml  eccv.yaml  ecir.yaml  ecmlpkdd.yaml  emnlp.yaml  emnlpindustrytrack.yaml  emnlpsystemdemonstrationstrack.yaml  esann.yaml  eurographics.yaml  euvip.yaml  facct.yaml  fg.yaml  (+68 more)
rank/: core.yaml  h5index.yaml
src/: data_to_json.py  index.html  ranking.py  scripts.js  site.webmanifest  sitemap.xml  styles.css  update_data.py  utils.py
src/parser/: ccf_deadlines.py  common_website.py  hf_list.py  (+3 more)
tests/: conftest.py  test_http.py  test_merge_priority.py  test_parsers.py  test_see_future.py  test_utils.py  test_validate.py
