[metadata]
name = aideadlines
version = 0.1.0
description = Scraper & data pipeline for AI conference deadlines
author = Your Name
author_email = you@example.com
license = MIT

[options]
packages = find:
install_requires =
    requests
    pyyaml
    dateparser
    loguru
    beautifulsoup4
    pytz

[options.entry_points]
console_scripts =
    aideadlines-update = aideadlines.update_data:main
