[metadata]
name = aideadlines
version = 0.1.0
description = Scraper & data pipeline for AI conference deadlines
author = Tobias Christian Nauen
author_email = tobias@nauen-it.de
license = MIT

[options]
packages = find:
install_requires =
    requests
    pyyaml
    dateparser
    python-dateutil
    loguru
    beautifulsoup4
    pytz

[options.entry_points]
console_scripts =
    aideadlines-update = aideadlines.update_data:main
